# gameboy-camera-adapter

./: .gitignore  CMakeLists.txt  COMMUNICATION.md  Dockerfile  PRINTER_PROTOCOL.md  README.md  build.sh  regen-fsdata.sh  run_commands.sh
fs/: env.json  gif.html  index.html  index.shtml  manifest.json  remote.html  script.js  site.webmanifest  styles.css  updating.html
fs/css/: styles.css
fs/img/: site.webmanifest
fs/js/: script.js
include/: cdc_sender.h  globals.h  lwipopts.h  pico_printer_fs.c  tusb_config.h
output/: hello_usb.uf2  pico_gb_printer.uf2
src/: cdc_sender.c  gb_printer.c  linkcable.c  pico_gb_printer.c  tusb_lwip_glue.c  usb_descriptors.c  ws2812.c
